--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.14",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1"
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2"
   },
   "engines": {
     "node": ">=22"
