fix!: fixed favicon base url
BREAKING CHANGES: updated env variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      SITE_URL: ${{ vars.SITE_URL }}
-      BASE_URL: ${{ vars.BASE_URL }}
+      PUBLIC_SITE_URL: ${{ vars.PUBLIC_SITE_URL }}
+      PUBLIC_BASE_URL: ${{ vars.PUBLIC_BASE_URL }}
       PUBLIC_APP_TITLE: ${{ vars.PUBLIC_APP_TITLE }}
       PUBLIC_CONTACT_URL: ${{ vars.PUBLIC_CONTACT_URL }}
     steps:
